--- a/src/component/header-info/header-info.css
+++ b/src/component/header-info/header-info.css
@@ -12,6 +12,7 @@
 .header-lang-social {
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
     width: 100%;
 }
 
@@ -27,7 +28,8 @@
 }
 
 .social {
-    margin-top: 16px;
+    display: flex;
+    margin-bottom: 34px;
 }
 
 .social i {
