add Spinner and Error indicator

--- a/src/component/aside-items/aside-item.sass
+++ b/src/component/aside-items/aside-item.sass
@@ -10,8 +10,8 @@
     color: #868685
     font-size: 20px
 
-  .aside-items-time
-    margin: 0 0 0 10px
+  .aside-items-start
+    margin: 0 0 0 20px
 
   .aside-items-tickets
     margin: 0 10px 0 0
@@ -34,4 +34,4 @@
     font-size: 30px
     color: #ffc800
     bottom: 10%
-    left: 2%
+    left: 20px
