--- a/src/component/header-info/header-info.sass
+++ b/src/component/header-info/header-info.sass
@@ -24,7 +24,7 @@
 
   .social
     display: flex
-    margin-bottom: 34px
+    margin-bottom: 10px
 
     i
       margin-left: 10px
@@ -34,4 +34,20 @@
     margin-top: 16px
 
     p
-      margin: 0
+      margin: 0 5px 0 0
+
+  .header-button
+    width: 40px
+    height: 40px
+
+  .social-container
+    display: flex
+    flex-direction: column
+    align-items: flex-end
+
+  .header-button-row
+    width: 100%
+    margin: 5px 0 0 0
+    height: 6px
+    background-color: #868685
+    border-radius: 50px
