--- a/src/component/events-item/events-item.sass
+++ b/src/component/events-item/events-item.sass
@@ -3,10 +3,11 @@
   width: 100%
   display: flex
   position: relative
+  justify-content: center
 
   img
     width: 100%
-    height: 300px
+    height: 200px
     object-fit: cover
     object-position: 100% 20%
     margin: 15px 0 0 0
@@ -14,31 +15,31 @@
   &-event-date
     right: 0
     top: 25px
-    font-size: 30px
-    color: #868685
+    font-size: 15px
+    color: white
     margin: 0 20px 0 0
     position: absolute
 
   &-artist
     position: absolute
-    font-size: 30px
+    font-size: 25px
     color: #ffc800
-    bottom: 35%
-    left: 5%
+    bottom: 20%
+    left: 25px
 
   &-event-name
     position: absolute
-    font-size: 30px
+    font-size: 25px
     color: #ffc800
-    bottom: 15%
-    left: 5%
+    bottom: 2%
+    left: 25px
 
 
   &-line
     position: absolute
     background-color: #ffc800
     width: 95%
-    bottom: 30%
+    bottom: 15%
     height: 10px
-    margin: 0 0 0 10px
-    right: 0
+
+
