--- a/src/component/footer-info/footer-info.sass
+++ b/src/component/footer-info/footer-info.sass
@@ -1,11 +1,11 @@
 .footer
   width: 100%
   display: flex
-  flex-direction: row
+  flex-direction: column
   margin-top: 15px
 
   .footer-img
-    width: 300px
+    width: 100%
 
   &-right-info
     display: flex
@@ -16,19 +16,25 @@
     display: flex
     flex-direction: column
     justify-content: flex-end
+    font-size: 15px
+    color: slategray
 
     span
-    margin-top: 10px
-    margin-left: 20px
+    margin: 0 0 10px 0
 
   &-info
     display: flex
     flex-direction: column
-    justify-content: flex-end
-    align-items: flex-end
 
     span
-      margin-top: 10px
+      color: slategray
+      font-size: 15px
 
-  .footer-social i
-    margin-left: 10px
+  .footer-social
+    i
+      font-size: 15px
+      color: slategray
+      margin-right: 10px
+
+
+
