--- a/src/component/header-menu-bar/header-menu-bar.sass
+++ b/src/component/header-menu-bar/header-menu-bar.sass
@@ -1,4 +1,38 @@
 .header-menu-bar
-  background-color: aqua
+  background-color: #868685
   width: 100%
-  height: 300px
+  display: flex
+  flex-direction: column
+
+  .header-menu-bar-btn
+    display: flex
+    justify-content: flex-end
+    font-size: 25px
+    margin: 20px
+
+    i
+      color: white
+
+  .header-menu-bar-img
+    margin: 0 40px
+
+  .header-menu-bar-data
+    font-size: 15px
+    margin: 0 40px
+    color: white
+    .social
+        i
+          margin-right: 10px
+
+
+  .header-menu-bar-link
+    ul
+      list-style-type: none
+
+      li
+        margin: 15px 0 0 0
+
+        a
+          text-decoration: none
+          color: white
+          font-size: 20px
