add new Component login-page and react-router

--- a/src/component/main/main.sass
+++ b/src/component/main/main.sass
@@ -1,6 +1,12 @@
 .main-events
+  @media (min-width: 1200px)
+    width: 100%
+    display: flex
+    flex-wrap: wrap
+    justify-content: center
   h2
     font-size: 25px
     color: slategray
-
+    @media (min-width: 768px)
+      font-size: 45px
 
