--- a/src/component/aside-items/aside-item.sass
+++ b/src/component/aside-items/aside-item.sass
@@ -9,6 +9,10 @@
     justify-content: space-between
     color: #868685
     font-size: 20px
+    @media (min-width: 768px)
+      font-size: 30px
+    @media (min-width: 1200px)
+      font-size: 20px
 
   .aside-items-start
     margin: 0 0 0 20px
@@ -28,6 +32,10 @@
     object-fit: cover
     object-position: 100% 20%
     margin: 15px 0 0 0
+    @media (min-width: 768px)
+      height: 200px
+    @media (min-width: 1200px)
+      height: 100px
 
   .aside-items-artist
     position: absolute
@@ -35,3 +43,7 @@
     color: #ffc800
     bottom: 20%
     left: 20px
+    @media (min-width: 768px)
+      font-size: 35px
+    @media (min-width: 1200px)
+      font-size: 25px
