--- a/src/component/aside-list/aside-list.sass
+++ b/src/component/aside-list/aside-list.sass
@@ -1,8 +1,17 @@
 .aside
-  width: 100%
   display: flex
   flex-direction: column
+  @media (min-width: 1200px)
+    width: 25%
 
   h2
     color: #868685
     font-size: 25px
+    @media (min-width: 768px)
+      font-size: 45px
+    @media (min-width: 1200px)
+      font-size: 25px
+
+  .aside-calendar
+   @media (min-width: 1200px)
+     margin: 15px 0 0 0
