--- a/src/component/events-item/events-item.sass
+++ b/src/component/events-item/events-item.sass
@@ -1,9 +1,10 @@
 
 .events-item
-  width: 100%
-  display: flex
   position: relative
+  display: flex
   justify-content: center
+  @media (min-width: 1200px)
+    margin: 15px
 
   img
     width: 100%
@@ -11,6 +12,11 @@
     object-fit: cover
     object-position: 100% 20%
     margin: 15px 0 0 0
+    @media (min-width: 768px)
+      height: 300px
+    @media (min-width: 1200px)
+      height: 200px
+      width: 400px
 
   &-event-date
     right: 0
@@ -19,6 +25,8 @@
     color: white
     margin: 0 20px 0 0
     position: absolute
+    @media (min-width: 768px)
+      font-size: 25px
 
   &-artist
     position: absolute
@@ -34,12 +42,9 @@
     bottom: 2%
     left: 25px
 
-
   &-line
     position: absolute
     background-color: #ffc800
     width: 95%
     bottom: 15%
-    height: 10px
-
-
+    height: 5px
