--- a/src/component/header-info/header-info.sass
+++ b/src/component/header-info/header-info.sass
@@ -4,9 +4,14 @@
   flex-direction: column
   margin-bottom: 15px
 
+  @media (min-width: 1200px)
+    flex-direction: row
+
   .header-img
     img
       width: 100%
+      @media (min-width: 1200px)
+        width: 90%
 
   .header-lang-social
     display: flex
@@ -14,6 +19,13 @@
     width: 100%
     font-size: 17px
     color: slategray
+    @media (min-width: 768px)
+      font-size: 25px
+    @media (min-width: 1200px)
+      margin: 35px 0 0 0
+      font-size: 20px
+      flex-direction: row
+      justify-content: space-between
 
     p
       margin: 0
@@ -22,6 +34,10 @@
   .social
     display: flex
     font-size: 23px
+    @media (min-width: 768px)
+      font-size: 46px
+    @media (min-width: 1200px)
+      font-size: 23px
 
     i:not(:first-child)
       margin-left: 10px
@@ -30,6 +46,10 @@
     display: flex
     margin-top: 16px
     font-size: 17px
+    @media (min-width: 768px)
+      font-size: 25px
+    @media (min-width: 1200px)
+      font-size: 20px
 
     p
       margin: 0 5px 0 0
@@ -37,6 +57,8 @@
   .header-button
     width: 32px
     height: 32px
+    @media (min-width: 1200px)
+      padding: 20px 0 0 0
 
     .header-button-row
       width: 100%
@@ -52,4 +74,6 @@
     display: flex
     justify-content: space-between
     align-items: center
-
+    @media (min-width: 1200px)
+      flex-direction: column
+      align-items: flex-end
