--- a/src/component/header-menu-bar/header-menu-bar.sass
+++ b/src/component/header-menu-bar/header-menu-bar.sass
@@ -3,18 +3,35 @@
   width: 100%
   display: flex
   flex-direction: column
+  @media (min-width: 1200px)
+    height: 250px
+    flex-direction: row
+    justify-content: space-evenly
 
   .header-menu-bar-btn
     display: flex
     justify-content: flex-end
     font-size: 25px
     margin: 20px
-
+    @media (min-width: 1200px)
+      order: 1
     i
       color: white
 
+  .header-menu-bar-data-info
+    p
+      @media (min-width: 768px)
+       font-size: 17px
+      @media (min-width: 1200px)
+        margin: 0
+
+
+
   .header-menu-bar-img
     margin: 0 40px
+    @media (min-width: 1200px)
+      width: 300px
+
 
   .header-menu-bar-data
     font-size: 15px
@@ -23,6 +40,9 @@
     .social
         i
           margin-right: 10px
+        @media (min-width: 1200px)
+         font-size: 30px
+         margin: 0 0 20px 0
 
 
   .header-menu-bar-link
@@ -31,8 +51,11 @@
 
       li
         margin: 15px 0 0 0
-
         a
           text-decoration: none
           color: white
           font-size: 20px
+          @media (min-width: 768px)
+           font-size: 35px
+          @media (min-width: 1200px)
+            font-size: 25px
