--- a/src/component/header-info/header-info.sass
+++ b/src/component/header-info/header-info.sass
@@ -57,6 +57,8 @@
   .header-button
     width: 32px
     height: 32px
+    &:hover
+      cursor: pointer
     @media (min-width: 1200px)
       padding: 20px 0 0 0
 
