--- a/src/component/header-menu-bar/header-menu-bar.sass
+++ b/src/component/header-menu-bar/header-menu-bar.sass
@@ -13,6 +13,8 @@
     justify-content: flex-end
     font-size: 25px
     margin: 20px
+    &:hover
+      cursor: pointer
     @media (min-width: 1200px)
       order: 1
     i
