--- a/src/component/events-list/events-list.sass
+++ b/src/component/events-list/events-list.sass
@@ -1,3 +1,9 @@
+.events-container
+  @media (min-width: 1200px)
+    display: flex
+    flex-direction: column
+    align-items: center
+
 .events-list
   @media (min-width: 1200px)
     display: flex
