add Redux-Form add Sunk

--- a/src/component/event-item-page/event-item-page.sass
+++ b/src/component/event-item-page/event-item-page.sass
@@ -1,23 +1,25 @@
 .event-item-page
   display: flex
   flex-direction: column
+  align-items: center
+  position: relative
 
   .event-item-page-container
-    @media (min-width: 768px)
+    @media (min-width: 1440px)
      display: flex
      justify-content: center
 
   .event-item-page
 
-   .events-item-line-page
-    position: absolute
-    background-color: #ffc800
-    width: 25%
-    bottom: 25%
-    height: 5px
-
-   @media (min-width: 768px)
-    width: 100%
+   //.events-item-line-page
+   // position: absolute
+   // background-color: #ffc800
+   // width: 95%
+   // bottom: 25%
+   // height: 5px
+   //
+   //@media (min-width: 768px)
+   // width: 100%
 
 
    img
@@ -26,7 +28,7 @@
     height: 250px
     margin: 10px 0
     @media (min-width: 768px)
-      height: 300px
+      height: 485px
     @media (min-width: 1200px)
       height: 350px
       margin:  0 0 0 15px
