--- a/src/component/events-item/events-item.sass
+++ b/src/component/events-item/events-item.sass
@@ -1,6 +1,6 @@
-
 .events-item
   position: relative
+
   @media (min-width: 1200px)
     margin: 15px
 
@@ -21,24 +21,26 @@
     top: 25px
     font-size: 15px
     color: white
-    margin: 0 20px 0 0
+    margin: 0 15px 0 0
     position: absolute
     @media (min-width: 768px)
       font-size: 25px
 
   &-artist
     position: absolute
-    font-size: 25px
+    font-size: 29px
     color: #ffc800
     bottom: 20%
-    left: 25px
+    width: 95%
+    left: 3%
 
   &-event-name
     position: absolute
-    font-size: 25px
+    font-size: 19px
     color: #ffc800
     bottom: 3%
-    left: 25px
+    width: 95%
+    left: 3%
 
   &-line
     position: absolute
@@ -46,3 +48,4 @@
     width: 95%
     bottom: 15%
     height: 5px
+    left: 3%
