--- a/src/component/header-info/header-info.sass
+++ b/src/component/header-info/header-info.sass
@@ -4,6 +4,8 @@
   flex-direction: column
   margin-bottom: 15px
 
+  @media (min-width: 768px)
+    margin-bottom: 40px
   @media (min-width: 1200px)
     flex-direction: row
 
