--- a/src/component/main/main.sass
+++ b/src/component/main/main.sass
@@ -1,4 +1,8 @@
 .main-events
+  @media (min-width: 1024px)
+    width: 55%
+    margin: 0 auto
+
   @media (min-width: 1200px)
     width: 100%
     display: flex
@@ -9,4 +13,6 @@
     color: slategray
     @media (min-width: 768px)
       font-size: 45px
+    @media (min-width: 1024px)
+      margin-top: 0
 
