fixed bugs redux-form and add component loginDone

--- a/src/component/aside-list/aside-list.sass
+++ b/src/component/aside-list/aside-list.sass
@@ -3,6 +3,8 @@
   flex-direction: column
   @media (min-width: 1024px)
     width: 35%
+  @media (min-width: 1200px)
+    width: 25%
 
   h2
     color: #868685
