--- a/src/component/login-page/login-page.sass
+++ b/src/component/login-page/login-page.sass
@@ -81,6 +81,7 @@
   background: slategray
   border-width: 0
   border-radius: 5px
+  border-color: #3d7ec0
   color: white
   font-size: 18px
   font-weight: bold
