--- a/src/component/login-page/login-page.sass
+++ b/src/component/login-page/login-page.sass
@@ -7,6 +7,18 @@
     width: 55%
     margin: 0 auto
 
+  .login-page-error
+    display: flex
+    color: red
+    font-weight: bold
+    font-size: 20px
+    align-self: flex-start
+    margin: 10px
+    @media (min-width: 768px)
+      font-size: 35px
+      @media (min-width: 1024px)
+        font-size: 30px
+
   .login-page
     @media (min-width: 1024px)
       display: flex
@@ -30,6 +42,7 @@
 
   h1
     font-size: 30px
+    color: #868685
     @media (min-width: 768px)
       font-size: 45px
     @media (min-width: 1024px)
