--- a/src/component/registration-page/registration-page.sass
+++ b/src/component/registration-page/registration-page.sass
@@ -3,13 +3,16 @@
   display: flex
   flex-direction: column
   align-items: center
+  @media (min-width: 768px)
+    flex-wrap: wrap
 
   a
-    color: slategray
+    color: orange
     font-weight: bold
 
   h1
     font-size: 30px
+    color: #868685
     @media (min-width: 768px)
       font-size: 45px
     @media (min-width: 1024px)
@@ -19,11 +22,13 @@
   @media (min-width: 1024px)
     width: 55%
     margin: 0 auto
+    @media (min-width: 1024px)
+      width: 65%
 
 
-  registration-page
+  .registration-page
+
   span
-    color: #868685
     font-weight: bold
     font-size: 20px
     align-self: flex-start
@@ -31,3 +36,24 @@
       font-size: 35px
     @media (min-width: 1024px)
       font-size: 30px
+
+  .form-registration
+    @media (min-width: 768px)
+      display: flex
+
+  .registration-agreement
+    display: flex
+    flex-direction: column
+    font-size: 18px
+
+    @media (min-width: 768px)
+      margin: 15px 20px
+
+  .agreement-box
+    display: flex
+    margin-top: 10px
+
+  @media (min-width: 768px)
+    margin-top: 15px
+
+
