bug fix error message and loading indicator

--- a/src/component/conditions-page/conditions-page.sass
+++ b/src/component/conditions-page/conditions-page.sass
@@ -1,10 +1,11 @@
-.info-conditions
+.conditions
   display: flex
   flex-direction: column
   text-align: left
-  h1
+
+h1
   font-size: 25px
-  color: #868685
+  color: #414b59
   font-weight: bold
 
   div
