--- a/src/component/event-item-page/event-item-page.sass
+++ b/src/component/event-item-page/event-item-page.sass
@@ -32,7 +32,7 @@
 
   h1
     font-size: 30px
-    color: slategray
+    color: #414b59
     @media (min-width: 768px)
       font-size: 45px
     @media (min-width: 1024px)
@@ -53,7 +53,7 @@
       font-size: 35px
 
   .event-item-info
-    color: slategray
+    color: #414b59
 
     p
       font-size: 15px
