--- a/src/component/login-page/login-page.sass
+++ b/src/component/login-page/login-page.sass
@@ -26,7 +26,7 @@
       width: 100%
 
   a
-    color: slategray
+    color: #414b59
     font-weight: bold
 
 
@@ -42,7 +42,7 @@
 
   h1
     font-size: 30px
-    color: #868685
+    color: #414b59
     @media (min-width: 768px)
       font-size: 45px
     @media (min-width: 1024px)
