--- a/src/component/registration-page/registration-page.sass
+++ b/src/component/registration-page/registration-page.sass
@@ -12,7 +12,7 @@
 
   h1
     font-size: 30px
-    color: #868685
+    color: #414b59
     @media (min-width: 768px)
       font-size: 45px
     @media (min-width: 1024px)
@@ -27,8 +27,8 @@
 
 
   .registration-page
-
-  span
+   span
+    color: #868685
     font-weight: bold
     font-size: 20px
     align-self: flex-start
@@ -55,5 +55,3 @@
 
   @media (min-width: 768px)
     margin-top: 15px
-
-
