changed class components to hooks

--- a/src/component/pagination/pagination.sass
+++ b/src/component/pagination/pagination.sass
@@ -2,8 +2,10 @@
   display: flex
   justify-content: center
   margin: 20px 0 0 0
-  span
+  .pages-item
     margin: 5px
     font-size: 25px
-    &:hover
-      cursor: pointer
+  &.active
+    font-weight: bold
+  &:hover
+    cursor: pointer
