--- a/src/component/login-done/login-done.sass
+++ b/src/component/login-done/login-done.sass
@@ -11,7 +11,10 @@
     @media (min-width: 768px)
       flex-direction: row
 
-
+    a
+      text-decoration: none
   h2
     text-align: center
     color: #414b59
+
+
