--- a/src/component/conditions-page/conditions-page.sass
+++ b/src/component/conditions-page/conditions-page.sass
@@ -3,12 +3,23 @@
   flex-direction: column
   text-align: left
   width: 55%
+  margin: 0 auto
+  color:  #868685
 
 h1
   font-size: 25px
   color: #414b59
   font-weight: bold
+  text-align: center
+  margin: 0 0 25px 0
+
+h4
+  margin: 25px 0 0 0
+
 
   div
     margin: 10px
     font-size: 20px
+
+a
+  text-decoration: none
