--- a/src/component/login-done/login-done.sass
+++ b/src/component/login-done/login-done.sass
@@ -3,11 +3,17 @@
   margin: 0 auto
   display: flex
   flex-direction: column
+  @media (min-width: 768px)
+   align-items: center
   @media (min-width: 1024px)
    width: 55%
   .login-done-button
     display: flex
     flex-direction: column
+
+    .button-login-page
+      @media (min-width: 768px)
+        margin: 20px
     @media (min-width: 768px)
       flex-direction: row
 
