--- a/src/component/registration-page/registration-page.sass
+++ b/src/component/registration-page/registration-page.sass
@@ -23,7 +23,7 @@
     width: 55%
     margin: 0 auto
     @media (min-width: 1024px)
-      width: 65%
+      width: 55%
 
 
   .registration-page
@@ -31,6 +31,8 @@
     font-weight: bold
     font-size: 20px
     align-self: flex-start
+    .input-form
+      width: 100%
     @media (min-width: 768px)
       font-size: 35px
     @media (min-width: 1024px)
