added styles to the HallsSchemes component

--- a/src/component/halls-schemes/halls-schemes.sass
+++ b/src/component/halls-schemes/halls-schemes.sass
@@ -1,3 +1,70 @@
 .hall
-  width: 55%
   margin: 0 auto
+
+
+  .hall-seat
+    overflow-x: auto
+
+  .title
+    display: flex
+    flex-direction: column
+
+  .hall-notausgang
+    display: flex
+    justify-content: space-between
+    margin: 20px
+
+  .hall-section
+    display: flex
+    justify-content: center
+    align-items: center
+    border: 2px solid #07ace8
+    width: 100px
+    height: 40px
+    color: #07ace8
+
+  .hall-schemes-exit
+    display: flex
+    justify-content: space-between
+
+    .eingang-ausgang
+      display: flex
+      padding: 20px
+      align-items: center
+      font-weight: bold
+      flex-wrap: wrap
+      width: 50px
+      border: 2px solid #07ace8
+      color: #07ace8
+
+    span
+      color: #07ace8
+      font-weight: bold
+      display: flex
+      justify-content: center
+      margin: 0 0 5px 0
+
+
+  .hall-exit
+    display: flex
+    flex-direction: column
+
+
+  h1
+    font-size: 40px
+
+  h2
+    width: 80%
+    text-align: center
+    font-weight: bold
+    font-size: 30px
+    margin: 0 auto
+    background: #07ace8
+    color: white
+
+  h3
+    display: flex
+    justify-content: center
+    color: #3575b8
+    font-weight: bold
+    font-size: 20px
