--- a/src/component/main/main.sass
+++ b/src/component/main/main.sass
@@ -10,7 +10,7 @@
     justify-content: center
   h2
     font-size: 25px
-    color: slategray
+    color: #414b59
     @media (min-width: 768px)
       font-size: 45px
     @media (min-width: 1024px)
