--- a/src/component/seat/seat.sass
+++ b/src/component/seat/seat.sass
@@ -1,7 +1,8 @@
 .seat
   width: 20px
   height: 20px
-  border: 1px solid crimson
+  border: 1px solid #07ace8
   display: flex
   justify-content: center
   align-items: center
+  color: #07ace8
