--- a/src/component/event-item-page/event-item-page.sass
+++ b/src/component/event-item-page/event-item-page.sass
@@ -87,15 +87,20 @@
         font-size: 28px
 
   .event-buy-tickets
-    margin: 10px 0
-    font-weight: bold
-    font-size: 30px
-    color: #ffc800
+    a
+     text-decoration: none
+     margin: 10px 0
+     font-weight: bold
+     font-size: 30px
+     color: #ffc800
+
+
 
     &:hover
       cursor: pointer
 
     @media (min-width: 1200px)
-      margin: 30px 0 0 30px
-      font-size: 40px
+      a
+       margin: 30px 0 0 30px
+       font-size: 40px
 
