add style tickets-page-container tickets-page

--- a/src/component/seat/seat.sass
+++ b/src/component/seat/seat.sass
@@ -1,8 +1,9 @@
 .seat
-  width: 20px
-  height: 20px
+  width: 12px
+  height: 12px
   border: 1px solid #07ace8
   display: flex
   justify-content: center
   align-items: center
   color: #07ace8
+  font-size: 10px
