--- a/src/component/header-info/header-info.sass
+++ b/src/component/header-info/header-info.sass
@@ -48,6 +48,12 @@
     display: flex
     margin-top: 16px
     font-size: 17px
+
+    a
+      text-decoration: none
+      color: #6d6d67
+
+
     @media (min-width: 768px)
       font-size: 25px
     @media (min-width: 1200px)
@@ -59,8 +65,10 @@
   .header-button
     width: 32px
     height: 32px
+
     &:hover
       cursor: pointer
+
     @media (min-width: 1200px)
       padding: 20px 0 0 0
 
