added function of getting row and place

--- a/src/component/halls-schemes/halls-schemes-large/halls-schemes-large.sass
+++ b/src/component/halls-schemes/halls-schemes-large/halls-schemes-large.sass
@@ -17,6 +17,7 @@
     justify-content: space-between
     margin: 20px
 
+
     .hall-section-large
       display: flex
       justify-content: center
@@ -61,6 +62,7 @@
   .hall-large
     display: flex
     padding: 20px 5px
+    //overflow-x: auto
 
   //::-webkit-scrollbar
   //  display: none
