--- a/src/container-component/tickets-page-container/tickets-page-container.sass
+++ b/src/container-component/tickets-page-container/tickets-page-container.sass
@@ -20,5 +20,5 @@
       display: flex
       justify-content: space-between
 
-  .schemes-container
-    overflow-x: auto
+    .schemes-container
+      overflow-x: hidden
