--- a/src/component/header-info/header-info.sass
+++ b/src/component/header-info/header-info.sass
@@ -49,9 +49,11 @@
     margin-top: 16px
     font-size: 17px
 
+
     a
       text-decoration: none
-      color: #6d6d67
+      color: #43433e
+
 
 
     @media (min-width: 768px)
@@ -60,7 +62,7 @@
       font-size: 20px
 
     p
-      margin: 0 5px 0 0
+      margin: 0 0 0 10px
 
   .header-button
     width: 32px
