--- a/src/container-component/tickets-page-container/tickets-page-container.sass
+++ b/src/container-component/tickets-page-container/tickets-page-container.sass
@@ -21,4 +21,7 @@
       justify-content: space-between
 
     .schemes-container
-      overflow-x: hidden
+      @media (min-width: 768px)
+        justify-content: center
+      @media (min-width: 1024px)
+        justify-content: space-between
