add style cart-row-list,shopping-cart-container,price-range,tickets-cart

--- a/src/component/cart-row/cart-row-list..sass
+++ b/src/component/cart-row/cart-row-list..sass
@@ -1,4 +1,6 @@
 .cart-row-list-container
+  @media (min-width: 1440px)
+    width: 250px
 
   .cart-row-list
     display: flex
@@ -8,5 +10,4 @@
   span
       font-size: 20px
       color: #6d6d67
-      font-size: 20px
       font-weight: bold
