--- a/src/component/price-range/price-range.sass
+++ b/src/component/price-range/price-range.sass
@@ -1,6 +1,10 @@
 .price-ranges-container
   margin-top: 20px
   color: #6d6d67
+  @media (min-width: 768px)
+    width: 50%
+  @media (min-width: 1440px)
+    width: 250px
 
   h2
     @media (min-width: 768px)
