--- a/src/component/app/app.sass
+++ b/src/component/app/app.sass
@@ -4,3 +4,18 @@
 
   @media(min-width: 1024px)
     flex-direction: row
+
+.global-title
+  font-size: 30px
+  color: #414b59
+  display: flex
+  justify-content: center
+  @media (min-width: 768px)
+    font-size: 45px
+  @media (min-width: 1024px)
+   margin-top: 0
+   font-size: 55px
+  @media (min-width: 1200px)
+   font-size: 65px
+   text-align: center
+   margin: 0 0 30px 0
