--- a/src/component/app/app.sass
+++ b/src/component/app/app.sass
@@ -19,3 +19,26 @@
    font-size: 65px
    text-align: center
    margin: 0 0 30px 0
+
+.global-tickets-page-title
+  display: flex
+  flex-wrap: wrap
+  font-weight: bold
+  color:  #6d6d66
+  font-size: 20px
+  margin: 20px 0
+  @media (min-width: 768px)
+    font-size: 30px
+  @media (min-width: 1024px)
+    font-size: 35px
+
+.global-tickets-cart-container-title
+  display: flex
+  justify-content: space-between
+  margin-top: 20px
+  font-size: 20px
+  color: #6d6d67
+  font-weight: bold
+  @media (min-width: 1440px)
+    width: 250px
+
