--- a/src/component/app/app.sass
+++ b/src/component/app/app.sass
@@ -1,3 +1,6 @@
+body
+  font-family: Antonio, sans-serif
+
 .app-events
   display: flex
   flex-direction: column
@@ -13,18 +16,18 @@
   @media (min-width: 768px)
     font-size: 45px
   @media (min-width: 1024px)
-   margin-top: 0
-   font-size: 55px
+    margin-top: 0
+    font-size: 55px
   @media (min-width: 1200px)
-   font-size: 65px
-   text-align: center
-   margin: 0 0 30px 0
+    font-size: 65px
+    text-align: center
+    margin: 0 0 30px 0
 
 .global-tickets-page-title
   display: flex
   flex-wrap: wrap
   font-weight: bold
-  color:  #6d6d66
+  color: #6d6d66
   font-size: 20px
   margin: 20px 0
   @media (min-width: 768px)
