--- a/src/component/events-item/events-item.sass
+++ b/src/component/events-item/events-item.sass
@@ -27,25 +27,22 @@
       font-size: 25px
 
   &-artist
-    position: absolute
-    font-size: 29px
+    font-size: 39px
     color: #ffc800
-    bottom: 20%
-    width: 95%
-    left: 3%
+    font-weight: bold
 
   &-event-name
-    position: absolute
-    font-size: 19px
+    font-size: 29px
     color: #ffc800
-    bottom: 3%
-    width: 95%
-    left: 3%
 
   &-line
-    position: absolute
     background-color: #ffc800
-    width: 95%
-    bottom: 15%
     height: 5px
-    left: 3%
+
+
+.events-title-container
+  height: 100px
+  position: absolute
+  width: 95%
+  bottom: 3%
+  left: 3%
