--- a/src/container-component/shopping-cart-container/shopping-cart-container.sass
+++ b/src/container-component/shopping-cart-container/shopping-cart-container.sass
@@ -1,5 +1,7 @@
 .shopping-cart-container
   margin: 0 auto
+  @media (min-width: 1024px)
+   width: 55%
 
   .shopping-cart-container-info
     display: flex
