add  style batons

--- a/src/component/paying/paying.sass
+++ b/src/component/paying/paying.sass
@@ -24,6 +24,7 @@
         align-items: center
 
 
+
     .shopping-cart-button-wrapper
       width: 200px
       height: 35px
@@ -34,5 +35,7 @@
       font-weight: bold
       border-radius: 5px
       margin-top: 15px
+      &:hover
+        cursor: pointer
       @media (min-width: 768px)
         align-self: flex-end
