--- a/src/container-component/shopping-cart-container/shopping-cart-container.sass
+++ b/src/container-component/shopping-cart-container/shopping-cart-container.sass
@@ -1,7 +1,7 @@
 .shopping-cart-container
   margin: 0 auto
   @media (min-width: 1024px)
-   width: 55%
+    width: 55%
 
   .shopping-cart-container-info
     display: flex
@@ -41,6 +41,8 @@
         font-size: 18px
         font-weight: bold
         border-radius: 5px
+        &:hover
+         cursor: pointer
 
       .shopping-cart-footer-checkbox
         display: flex
