--- a/src/component/login-page/login-page.sass
+++ b/src/component/login-page/login-page.sass
@@ -94,6 +94,8 @@
   display: flex
   justify-content: center
   align-items: center
+  &:hover
+    cursor: pointer
   @media (min-width: 768px)
    width: 300px
    height: 50px
